<resources>
    <string name="app_description">Send WhatsApp message to unsaved contacts directly.</string>
    <string name="app_name">Direct to Chat</string>

    <string name="privacy_policy_title">Privacy Policy</string>

    <string name="about_app">Direct to Chat designed and developed by Mohammad Yasir. All rights reserved.\nThis application is not affiliated or associated with WhatsApp in any way.\nWhatsApp and the WhatsApp logo are trademarks of Whatsapp Inc.</string>
    <string name="attributions_all">Flags of countries obtained from <a href="https://flagpedia.net" target="_blank">Flagpedia.net</a>\n<a href="https://github.com/microsoft/fluentui-system-icons">Fluent UI System Icons</a> by <a href="https://www.microsoft.com/design/fluent/">Microsoft</a>\n<a href="https://github.com/L4Digital/FastScroll">Fast Scroller</a> created by <a href="https://github.com/L4Digital">L4Digital</a></string>
    <string name="attributions">Attributions</string>
    <string name="name">Mohammad Yasir</string>
    <string name="about">About</string>

    <string name="enter_number_warn">Please enter a WhatsApp number first.</string>
    <string name="enter_text">Enter your message (optional)</string>
    <string name="enter_number">Enter the WhatsApp number</string>
    <string name="phone_number">Phone Number</string>
    <string name="wa_business">WA Business</string>
    <string name="whatsapp">WhatsApp</string>

    <string name="strikethrough"><strike>Strikethrough</strike></string>
    <string name="monospace">Monospace</string>
    <string name="italics">Italics</string>
    <string name="bold">Bold</string>

    <string name="not_installed">The desired application is not installed on your device</string>
    <string name="country_flag">Country Flag</string>
    <string name="format">Format</string>
    <string name="plus">+</string>

    <string name="open_via">Select an app to open this link.</string>
    <string name="device_default">Device Default</string>
    <string name="select_country">Select Country</string>
    <string name="all_countries">All Countries</string>
    <string name="message">Message</string>

    <string name="isd_detected_message_no_country">It looks like you entered the ISD Code along with the phone number. We tried to detect what country it was, but were unable. Try removing the ISD code from the phone number and continuing again.\nYou can press ignore if you wish to continue anyway. </string>
    <string name="isd_detected_message">It looks like you entered the ISD Code along with the phone number. We have tried to detect the appropriate country and set it automatically. \nDid we get it right?</string>
    <string name="no_number_entered">No phone number entered.</string>
    <string name="isd_code_detected">ISD Code Detected</string>
    <string name="ok_continue">Continue</string>
    <string name="country">Country</string>
    <string name="ignore">Ignore</string>
    <string name="paste">Paste</string>

    <string name="wa_message">Optional message to include which spans more than a single line.</string>
    <string name="wa_number">1234567890</string>
</resources>