<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CountrySelectorActivity"

    android:background="@color/backgroundColor"
    android:theme="@style/WhatsAppDirect"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/headerLayout"
        android:layout_marginTop="8dp">

        <TextView
            style="@style/TextAppearance.Material3.HeadlineLarge"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"

            android:textColor="?attr/colorPrimary"
            android:autoSizeTextType="uniform"
            android:paddingHorizontal="16dp"
            android:text="@string/select_country"
            android:id="@+id/header"
            android:maxLines="1"
            />

        <TextView
            android:background="@drawable/rounded_rectangle"
            android:textColor="@android:color/white"

            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginEnd="16dp"

            android:paddingHorizontal="8dp"
            android:paddingVertical="2dp"
            android:id="@+id/counter"
            tools:text="328"/>

    </LinearLayout>

    <TextView
        android:id="@+id/defaultHeader"
        android:text="@string/device_default"
        style="@style/BodyHeader"
        />

    <include layout="@layout/country_list_item"
        android:id="@+id/device_default"/>

    <TextView
        style="@style/BodyHeader"
        android:text="@string/all_countries" />

    <FrameLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/country_list_item"
            tools:itemCount="2"

            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:id="@+id/recycler"/>

        <com.l4digital.fastscroll.FastScroller
            app:bubbleColor="?attr/colorSecondary"
            app:handleColor="?attr/colorSecondary"
            app:hideScrollbar="false"
            app:bubbleTextSize="22sp"
            app:bubbleSize="small"

            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:id="@+id/scroller"/>

    </FrameLayout>


</LinearLayout>